@@ -29,6 +29,10 @@
 
 #define noELLIPSE_VERBOSE
 
+#ifndef M_PI
+#define M_PI 3.14159265358979323846
+#endif
+
 #define SP_2PI (2 * M_PI)
 
 #if 1
