@@ -1,3 +1,12 @@
+2002-12-28  Lauris Kaplinski  <lauris@kaplinski.com>
+
+	* src/libnrtype/nr-type-directory.c (nr_type_read_w32_list): Use
+	windows native fonts, if applicable
+
+	* src/libnrtype/nr-type-w32.h: New file
+
+	* src/libnrtype/nr-type-w32.c: New file
+
 2002-12-27  Lauris Kaplinski  <lauris@kaplinski.com>
 
 	* src/print.c (sp_print_image_R8G8B8A8_N): Implement direct PS version
